S assigned and credential UI fix

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -119,12 +119,13 @@
         </div>
     </perfect-scrollbar>   
 
-    <kr-modal modalType="center" #editCredential modalClass="modal_popups_ add-credentials-popup"> 
-        <div class="modal-header">
-            <span> {{"credentials.add_credential" | translate}}</span>
-            <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-        </div>
-        <ul class="nav nav-tabs d-none" role="tablist">
+    <kr-modal modalType="center"  #editCredentialPop  modalClass="modal_popups_ edit-credentials-popup"> 
+        <div class="modal-header d-none">            
+            <h4 class="modal-title">{{"credentials.edit_credential" | translate}}</h4>
+            <div class="close_icon" (click)="closeEditModalPopup()"><img src="assets/icons/modal-close.svg"></div>
+        </div>    
+        
+        <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#configuration">Configuration</a>
             </li>
@@ -137,9 +138,13 @@
                 <div class="tab-content">
                     <div id="configuration" class="container tab-pane active p-0">
                         <div class="kr-sg-input-text mb-4">
+                            <div class="label-text">{{"credentials.credential_name" | translate}}</div>
+                            <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name" class="input-text">
+                        </div>
+                        <!-- <div class="kr-sg-input-text mb-4">
                             <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
                             <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
-                        </div>
+                        </div> -->
                         <div class="group-checkbox mb-4 d-none">    
                             <div class="kr-sg-checkbox d-block">
                                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
@@ -162,13 +167,13 @@
                             </div>
                         </div>
             
-                        <div class="switch-toggle d-none">                
+                        <div class="switch-toggle">                
                             <label class="kr-sg-toggle">
                                 <input type="checkbox" [(ngModel)]="credntial.enabled">
                                 <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
                             </label>
                         </div>     
-                        <div class="client-input-box-container d-none">
+                        <div class="client-input-box-container">
                             <div class="data-sec mb-4">
                                 <div class="label-text">Client ID</div>
                                 <div class="input-box-content d-flex align-items-center">
@@ -217,28 +222,29 @@
             </div>
         </perfect-scrollbar>          
         <div class="modal-footer">
-            <button class="kr-sg-button-primary btn_lg" (click)="validateSource()">{{"credentials.add" | translate}}</button>
+            <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()">{{"credentials.add" | translate}}</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">{{"credentials.cancel" | translate}}</button>
         </div>
     </kr-modal> 
 
 
 
-    <kr-modal modalType="center" addCredential modalClass="modal_popups_ add-credentials-popup add-credebtials">
-        <div class="modal-header">            
-            <h4 class="modal-title">{{"credentials.edit_credential" | translate}}</h4>
-            <div class="close_icon" (click)="closeEditModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-        </div>        
+    <kr-modal modalType="center" #addCredential modalClass="modal_popups_ add-credentials-popup">
+        <div class="modal-header">
+            <span> {{"credentials.add_credential" | translate}}</span>
+            <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
+        </div>      
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
-                <div class="label-text">{{"credentials.credential_name" | translate}}</div>
-                <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name" class="input-text">
+                <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
+                <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
             </div>
-            <div class="kr-sg-checkbox d-block p-0 ">
+           
+            <div class="kr-sg-checkbox  p-0 d-none ">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.anonymus">
                 <label for="checkbox_1" class="checkbox-custom-label">{{"credentials.allow_anonymous_users_to_chat_with_the_bot" | translate}}</label>
             </div>
-            <div class="kr-sg-checkbox d-block p-0 ">
+            <div class="kr-sg-checkbox  d-none">
                 <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
@@ -255,7 +261,7 @@
                     </div>
                 </div>
             </div> 
-            <div class="switch-toggle mt-4">                
+            <div class="switch-toggle mt-4 d-none">                
                 <label class="kr-sg-toggle">
                     <input type="checkbox" [(ngModel)]="editCreden.enabled">
                     <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
@@ -263,7 +269,7 @@
             </div>
         </div>        
         <div class="modal-footer">
-            <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()" >{{"credentials.save"| translate}}</button>
+            <button class="kr-sg-button-primary btn_lg" (click)="validateSource()" >{{"credentials.save"| translate}}</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeEditModalPopup()">{{"credentials.cancel"| translate}}</button>
         </div>
     </kr-modal> 
