--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
@@ -237,7 +237,7 @@
         }
     }    
 }
-::ng-deep .add-credentials-popup{
+::ng-deep .edit-credentials-popup{
     &.add-credebtials{
         .modal-dialog{          
             width: 810px;
@@ -358,6 +358,46 @@
                 }       
             }
 
+        }
+    }    
+}
+
+::ng-deep .add-credentials-popup{
+    .modal-dialog{
+        background: #FFFFFF;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        width: 810px;
+        height: 523px;
+        max-height: 523px;
+        .modal-content{
+            border-radius: 8px !important;
+            .modal-header{
+                span{
+                    color: #202124;
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 22px;
+                }
+            }
+            .kr-sg-dropdowns {
+                .dropdown-open {
+                    .dropdown-input{
+                        border: solid 1px #EFF0F1 !important;
+                        background: #EFF0F1;
+                        &::before{
+                            opacity: 0.4;
+                        }
+                    }
+                }
+            }
+            .switch-toggle{
+                .kr-sg-toggle{
+                    span{
+                        width: 600px !important;
+                    }
+                }       
+            }
         }
     }    
 }
