--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -420,6 +420,7 @@
               font-weight: normal;
               font-size: 14px;
               line-height: 17px;
+              word-break: break-all;
               &.leader_percent{
                 color: #0D6EFD !important;
               }
@@ -672,6 +673,9 @@
 .dropdown-menu li {
   padding: 7px;
   cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;                     
 }
 .disable_edit {
   background-color: #eff0f1;
