--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -21,12 +21,12 @@
             <div class="title">{{'overview.totalUsers' | translate}} <span>({{'overview.last_24hrs' | translate}})</span></div>
             <div class="count-graph-data">
               <div class="count-sec">
-                <div class="count">{{totalUsersStats?.totalUsers}}</div>
-                <div class="cont-up-down" *ngIf="totalUsersStats?.percentageIncrease!=0">
-                  <span class="bg-type"><img [src]="totalUsersStats?.percentageIncrease<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ totalUsersStats?.percentageIncrease }}%
+                 <div class="count">{{totalUsersStats?.totalUsers}}</div> <!--*ngIf="totalUsersStats?.percentageIncrease!=0" -->
+                <div class="cont-up-down">
+                  <span class="bg-type" [ngClass]="{'fail':totalUsersStats?.percentageIncrease<0}"><img [src]="totalUsersStats?.percentageIncrease<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ totalUsersStats?.percentageIncrease }}%
                 </div>
               </div>
-              <div class="graph-sec" *ngIf="totalUsersStats?.percentageIncrease!=0">
+              <div class="graph-sec">
                 <img [src]="totalUsersStats?.percentageIncrease>=0?'assets/icons/overview/graph-1.svg':'assets/icons/overview/graph-3.svg'">
               </div>
             </div>
@@ -49,11 +49,11 @@
             <div class="count-graph-data">
               <div class="count-sec">
                 <div class="count">{{totalSearchesStats?.totalSearches}}</div>
-                <div class="cont-up-down" *ngIf="totalSearchesStats?.searchRate!=0">
-                  <span class="bg-type"><img [src]="totalSearchesStats?.searchRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ totalSearchesStats.searchRate }}%
+                 <div class="cont-up-down"> <!--*ngIf="totalSearchesStats?.searchRate!=0" -->
+                  <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.searchRate<0}"><img [src]="totalSearchesStats?.searchRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{ totalSearchesStats.searchRate }}%
                 </div>
               </div>
-              <div class="graph-sec" *ngIf="totalSearchesStats?.searchRate!=0">
+              <div class="graph-sec">
                 <img [src]="totalSearchesStats?.searchRate>=0?'assets/icons/overview/graph-1.svg':'assets/icons/overview/graph-3.svg'">
               </div>
             </div>
@@ -77,13 +77,14 @@
               <div class="count-sec">
                 <div class="count">
                   <span class="d-inline-block text-truncate" title="{{totalSearchesStats?.searchesWithResults}}">{{totalSearchesStats?.searchesWithResults}}</span>
-                  <span class="ctr-data">| {{'overview.Result_rate' | translate}}: <b>{{totalSearchesStats?.resultRate!=null?totalSearchesStats?.resultRate:0}}%</b></span>
+                  <span class="ctr-data">| {{'overview.Result_rate' | translate}}: <b>{{totalSearchesStats?.searchesWithResults!=null?totalSearchesStats?.searchesWithResults:0}}%</b></span>
                 </div>                
                 <div class="d-flex align-items-center">
-                  <div class="cont-up-down" *ngIf="![0,null].includes(totalSearchesStats.resultRate)">
-                    <span class="bg-type fail"><img [src]="totalSearchesStats?.increasedResultRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{totalSearchesStats?.increasedResultRate}}%
+                  <!-- *ngIf="![0,null].includes(totalSearchesStats.resultRate)" -->
+                  <div class="cont-up-down">
+                    <span class="bg-type" [ngClass]="{'fail':totalSearchesStats?.resultRate<0}"><img [src]="totalSearchesStats?.increasedResultRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{totalSearchesStats?.increasedResultRate}}%
                   </div>
-                  <div class="graph-sec pl-4 pt-0" *ngIf="![0,null].includes(totalSearchesStats.resultRate)">
+                  <div class="graph-sec pl-4 pt-0">
                     <img [src]="totalSearchesStats?.increasedResultRate>=0?'assets/icons/overview/graph-1.svg':'assets/icons/overview/graph-3.svg'">
                   </div>
                 </div>
