--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -176,7 +176,7 @@
                         <div class="divBlockEmptylastChild text-center">         
                             <div class="desc">{{'fields.no_search_results_found' | translate}}</div>
                         </div> 
-                        <app-record-pagination *ngIf="totalRecord && totalRecord>10" [totalRecord]='totalRecord' [limitpage]='10' (pageChanged)="paginate($event)"></app-record-pagination>
+                       <div style="margin-right: 10px;"> <app-record-pagination *ngIf="totalRecord && totalRecord>10" [totalRecord]='totalRecord' [limitpage]='10' (pageChanged)="paginate($event)"></app-record-pagination></div>
                     </perfect-scrollbar>  
                 </div>
                
