--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -158,7 +158,7 @@
                         padding: 0px 5px 0px 22px;
                         font-style: normal;
                         font-size: 14px;
-                        line-height: 14px;
+                        line-height: normal;
                         color: #202124;   
                         cursor: default;
                         word-break: break-word;
