--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -14264,16 +14264,22 @@ border: 0;
    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-first.disabled {
         cursor: not-allowed;
-        opacity: 0.5;
+        /* opacity: 0.5; */
    }
+   .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-first.disabled img{
+        opacity: 0.5;
+    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-previous {
         padding: 7px;
         cursor: pointer;
    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-previous.disabled {
         cursor: not-allowed;
-        opacity: 0.5;
+        /* opacity: 0.5; */
    }
+   .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-previous.disabled img{
+        opacity: 0.5;
+    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .input-text-data {
         display: flex;
         align-items: center;
@@ -14312,17 +14318,22 @@ border: 0;
    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-next.disabled {
         cursor: not-allowed;
-        opacity: 0.5;
+        /* opacity: 0.5; */
    }
+    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-next.disabled img{
+        opacity: 0.5;
+    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-last {
         padding: 7px;
         cursor: pointer;
    }
    .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-last.disabled {
         cursor: not-allowed;
-        opacity: 0.5;
+        /* opacity: 0.5; */
    }
-
+   .searchAssist-kore-chat-window .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-last.disabled img{
+        opacity: 0.5;
+    }
 
    .searchAssist-kore-chat-window .total-structured-data-wrap  .purejscarousel-btn {
     width: 30px !important;
