--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -17,7 +17,7 @@
     </div>
     <perfect-scrollbar>
       <div class="modal-body">
-        <div class="mian-title-desc" *ngIf="count_info">You can add maximum of 2 Business Rules in your current plan, Please Upgrade the plan to add more.</div>
+        <div class="mian-title-desc" *ngIf="count_info?.show">{{count_info?.msg}}</div>
         <div class="upgrade-details-prices row col-12 p-0" *ngIf="selectedPlan">          
           <div class="col-4 upgrade-price-card" *ngFor='let plan of filterPlansData' [ngClass]='{"current-plan":(selectedPlan.status!="expired"&&selectedPlan.planName===plan.name),"d-none":plan.type=="free"}'>
             <div class="main-content">
