inline manual issue in overview fixed

--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -1,4 +1,4 @@
-<app-useronboarding-journey #onboard [componentType]='componentType' *ngIf="showOverview"></app-useronboarding-journey>
+<app-useronboarding-journey #onboard [componentType]='componentType'></app-useronboarding-journey>
 <!-- <div class="over-view-config-tour" *ngIf="!showOverview">
   <div class="tour-header">
     <div class="title">{{'overview.overview' | translate}} </div>
