FLY-2871 issue fixed

--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -1287,7 +1287,7 @@
               </div>
             </div>
             
-            <div class="result-right-sec if-carouse-container" *ngIf="customizeTemplateObj.template.searchResultlayout.layout == 'tileWithHeader' && customizeTemplateObj.template.type == 'Carousel'">
+            <div class="result-right-sec if-carouse-container tile-with-headercarousel" *ngIf="customizeTemplateObj.template.searchResultlayout.layout == 'tileWithHeader' && customizeTemplateObj.template.type == 'Carousel'">
               <div class="carousel" id="carousel-default">
                 <div class="slide">
                   <div class="tile_with_header">
