--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -451,7 +451,20 @@ body::-webkit-scrollbar {
   font-size: 12px;
   line-height: 16px;
 }
-
+.sdk-top-down-interface .full-results-data-container .total-structured-data-wrap .structured-data-outer-wrap.carousel .tile-with-centered-content-parent.grid_view_template .tile-with-centered-content {
+  margin: 0px;
+}
+.sdk-top-down-interface .full-results-data-container .total-structured-data-wrap .structured-data-outer-wrap.carousel .tile-with-centered-content-parent.grid_view_template {
+  margin: 0px;
+  padding: 5px;
+}
+.sdk-top-down-interface .live_search_result_box .data-container .total-structured-data-wrap .structured-data-outer-wrap.carousel .tile-with-centered-content-parent.grid_view_template .tile-with-centered-content {
+  margin: 0px;
+}
+.sdk-top-down-interface .live_search_result_box .data-container .total-structured-data-wrap .structured-data-outer-wrap.carousel .tile-with-centered-content-parent.grid_view_template {
+  margin: 0px;
+  padding: 5px;
+}
 .sdk-top-down-interface .tile-with-centered-content-parent.grid_view_template {
   display: flex;
   flex-wrap: wrap;
@@ -463,7 +476,7 @@ body::-webkit-scrollbar {
   margin: 4px;
 }
 .sdk-top-down-interface .full-results-data-container .tile-with-centered-content-parent.grid_view_template .tile-with-centered-content {
-  width: 19%;
+  /* width: 19%; */
 }
 .sdk-top-down-interface .tile-with-centered-content-parent.grid_view_template .tile-with-centered-content .img-block {
   text-align: center;
@@ -2553,7 +2566,9 @@ display: none !important;
   height: auto;
   text-align: left;
   width: 214px;
-  margin: 5px;
+   /* margin: 5px; */
+   margin: 0px;
+   padding: 5px;
 }
 .top-down-search-background-div .topdown-search-main-container .all-result-container.right-align-filter .full-results-data-container .all-product-details .content-data-sec {
   padding: 0 20px 0 10px;
