--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -415,4 +415,4 @@
 </kr-modal>
 
 <!-- upgrade plan component-->
-<app-upgrade-plan #plans></app-upgrade-plan>
+<app-upgrade-plan #plans [componentType]="componentType" (upgradedEvent)="upgradeComplete($event)"></app-upgrade-plan>
